Change spacing issues from markbot, change index name

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: 'Georgia', serif;
+  font-family: Georgia, serif;
   line-height: 1.5;
   background-color: #f5f2f0;
 }
@@ -9,7 +9,7 @@ html {
   box-sizing: inherit;
 }
 
-main {
+body {
   margin: 0;
   padding: 1rem;
 }
@@ -56,5 +56,6 @@ li a {
 }
 
 p {
-  margin-bottom: 1 auto;
+  padding-bottom: 1rem;
+  margin-bottom: auto;
 }
